[package]
name = "axum-sample-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
dotenv = "0.15.0"
hyper = "1.6.0"
mysql = "26.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
